@@ -42,6 +42,9 @@ Small features:
     starpu_data_interface_id instead of a starpu_data_handle_t
   * New script starpu_env to set up StarPU environment variables
 
+Small changes:
+  * New configure option --disable-build-doc-pdf
+
 StarPU 1.3.3 (git revision 11afc5b007fe1ab1c729b55b47a5a98ef7f3cfad)
 ====================================================================
 
